frontend/test/should_pass/redirect_003d.grg
rule r {
	-e:Edge-> y:Node;
	x:Node;

	modify {
		-e->! x;
	}
}

