frontend/test/should_fail/copyEdgeDangling.grg
rule t {
	x:Node -e:Edge-> x;

	modify {
		x -ee:copy<e>->;
	}
}

